Fix broken UI in Homepage and Detail View Page

--- a/src/styles/components/_PluginPreview.scss
+++ b/src/styles/components/_PluginPreview.scss
@@ -76,7 +76,7 @@
     justify-content: space-between;
     align-items: center;
     background: $color-light-grey;
-    padding: 3px 20px 0;
+    padding: 7px 20px 5px;
     border: 1px solid $color-grey;
     border-width: 1px 0 0;
 
